# energy_consumption

./: .gitignore  Dockerfile  p1_client.py  pyproject.toml  requirements.txt
src/: docker-compose.yml  influxdb_client.py  measurement_storage.py  models.py  p1_client.py  run_energy_measurement.py  run_energy_measurement.sh
tests/: test_measurement_storage.py
