[tool.poetry]
name = "energy-consumption"
version = "0.1.0"
description = ""
authors = ["wouter-overbeek <wouter.overbeek@source.ag>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyserial = "^3.5"
pandas = "^2.2.1"
influxdb = "^5.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
